# otter

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DECISIONS.md  EVALS.md  Makefile  README.md  ROADMAP.md  SOUL.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: error.rs  events.rs  lib.rs  tests.rs  traits.rs  types.rs
crates/daemon/: Cargo.toml  README.md
crates/daemon/src/: config.rs  daemon.rs  lib.rs  session.rs  supervisor.rs
crates/provider-llamacpp/: Cargo.toml  README.md
crates/provider-llamacpp/src/: lib.rs  provider.rs
crates/store/: Cargo.toml  README.md
crates/store/src/: lib.rs  schema.rs  store.rs
