[package]
name = "otter-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "otter"
path = "src/main.rs"

[dependencies]
otter-daemon = { path = "../daemon" }
otter-provider-llamacpp = { path = "../provider-llamacpp" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
